# SimpleRPC

./: .gitignore  CMakeLists.txt  README.md  SimpleRPC.sln  SimpleRPC.vcxproj  SimpleRPC.vcxproj.filters
cmake_platformcheck/: CMakeLists.txt  has_trivial_copy_function.cpp  is_trivially_copyable_template.cpp
cmake_template/: platform.hpp
include/: rpcDefinitions.hpp
include/rpc/: api.hpp  client.hpp  exceptions.hpp  receivers.hpp  senders.hpp  server.hpp
include/rpc/detail/: helpers.hpp  packet.hpp  receiver.hpp  sender.hpp
source/: api.cpp  main.cpp  packet.cpp  rpcReceivers.cpp  sender.cpp
source/rpc/: iReceiver.cpp  packet.cpp  receiver.cpp
test/: main.cpp  rpcSenders.cpp
